--- a/example_server_sharedcanvas/bin/data/web/index.html
+++ b/example_server_sharedcanvas/bin/data/web/index.html
@@ -24,7 +24,7 @@
 		<div>
 			<h3>Canvas</h3>
 			<hr /> -->
-			<canvas id="sketchCanvas"/>
+			<canvas id="sketchCanvas" style="image-rendering: pixelated"/>
 		<!-- </div> -->
 	<!-- </div> -->
 </body>
