--- a/sharecanvas-nodejs/public/index.html
+++ b/sharecanvas-nodejs/public/index.html
@@ -7,12 +7,16 @@
 	<link rel="stylesheet" href="css/reset.css" type="text/css" media="screen" charset="utf-8" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
 	<script src="/socket.io/socket.io.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.3/p5.js"></script>
     <script type="text/javascript" src="js/libs/jquery-1.7.1.min.js"></script>
  	<script type="text/javascript" src="js/utils.js"></script>
- 	<script type="text/javascript" src="js/main.js"></script>
+ 	<!--<script type="text/javascript" src="js/main.js"></script>-->
+ 	
+ 	<script language="javascript" type="text/javascript" src="js/sketch.js"></script>
 </head>
 
 <body>
+
 	<!-- <div id="container"> -->
 		<!-- <h2>ofxLibwebsockets test applet</h2><hr />
 		<div>
@@ -25,7 +29,7 @@
 		<div>
 			<h3>Canvas</h3>
 			<hr /> -->
-			<canvas id="sketchCanvas" style="image-rendering: pixelated"/>
+			<!-- <canvas id="sketchCanvas" style="image-rendering: pixelated"/> -->
 		<!-- </div> -->
 	<!-- </div> -->
 </body>
