--- a/sharecanvas-nodejs/public/index.html
+++ b/sharecanvas-nodejs/public/index.html
@@ -1,36 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 	<meta charset=utf-8 />
- 	<meta name="apple-mobile-web-app-capable" content="yes">
- 	<title>ofxLibwebsockets Echo Server test app</title>
+	<meta charset=utf-8 />
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<title>ofxLibwebsockets Echo Server test app</title>
 	<link rel="stylesheet" href="css/reset.css" type="text/css" media="screen" charset="utf-8" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
 	<script src="/socket.io/socket.io.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.3/p5.js"></script>
-    <script type="text/javascript" src="js/libs/jquery-1.7.1.min.js"></script>
- 	<script type="text/javascript" src="js/utils.js"></script>
- 	<!--<script type="text/javascript" src="js/main.js"></script>-->
- 	
- 	<script language="javascript" type="text/javascript" src="js/sketch.js"></script>
+	<script type="text/javascript" src="js/libs/p5.min.js"></script>
+	<script type="text/javascript" src="js/libs/jquery-1.7.1.min.js"></script>
+	<script type="text/javascript" src="js/utils.js"></script>
 </head>
 
 <body>
+	<div>
+		<script language="javascript" type="text/javascript" src="js/sketch.js"></script>
+	</div>
 
-	<!-- <div id="container"> -->
-		<!-- <h2>ofxLibwebsockets test applet</h2><hr />
-		<div>
-			<h3>Browser info</h3><hr />
-			<div class="info">
-				<strong>Detected Browser: <div id="brow">...</div></strong><br />
-				<div id="status">Not initialized</div><br />
-			</div>
-		</div>
-		<div>
-			<h3>Canvas</h3>
-			<hr /> -->
-			<!-- <canvas id="sketchCanvas" style="image-rendering: pixelated"/> -->
-		<!-- </div> -->
-	<!-- </div> -->
 </body>
 </html>
