try to close the shape when user mouse release use guy plugin for the web interface

--- a/example_server_sharedcanvas/bin/data/web/index.html
+++ b/example_server_sharedcanvas/bin/data/web/index.html
@@ -3,12 +3,14 @@
 <head>
  	<meta charset=utf-8 />
  	<meta name="apple-mobile-web-app-capable" content="yes">
- 	<title>ofxLibwebsockets Echo Server test app</title>
+ 	<title>IFVA</title>
 	<link rel="stylesheet" href="css/reset.css" type="text/css" media="screen" charset="utf-8" />
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
     <script type="text/javascript" src="js/libs/jquery-1.7.1.min.js"></script>
  	<script type="text/javascript" src="js/utils.js"></script>
+ 	<script type="text/javascript" src="js/build/dat.gui.min.js"></script>
  	<script type="text/javascript" src="js/main.js"></script>
+ 	
 </head>
 
 <body>
@@ -27,5 +29,44 @@
 			<canvas id="sketchCanvas" style="image-rendering: pixelated"/>
 		<!-- </div> -->
 	<!-- </div> -->
+	<script type="text/javascript">
+		var ledAttr = function() 
+		{ 
+			this.speed=0 
+		};
+		var cirAttr = function() 
+		{
+			this.radius=10;
+			this.use= false;
+		};
+
+		var sqAttr = function() 
+		{
+			this.length=10;
+			this.angle=0;
+			this.use=false;
+		};
+
+	    var gui = new dat.GUI();
+	    var led = new ledAttr();
+	    
+	    var cir = new cirAttr();
+	    var sq = new sqAttr();
+	    var cF = gui.addFolder('Cicrle');
+		
+		cF.open();
+
+		var rF = gui.addFolder('Square');
+		rF.add(sq, 'length',1,20);
+		rF.add(sq, 'angle',0,90);
+		rF.add(sq, 'use');
+		rF.open();
+
+		var ledSpeed = gui.add(led, 'speed', 0, 500);
+		var circleR = cF.add(cir, 'radius', 1, 20);
+		var circleUsing = cF.add(cir, 'use');
+		 
+		//cF.add(obj, 'speed', 0, 500);	
+	</script>
 </body>
 </html>
